# pokinder

./: .gitignore  Dockerfile.postgres  Makefile  README.md  docker-compose.live.yml  docker-compose.yml
pokinder-backend/: .dockerignore  Dockerfile  alembic.ini  justfile  pyproject.toml
pokinder-backend/alembic/: env.py  script.py.mako
pokinder-backend/alembic/versions/: 2023-10-23T21:45_987cc4c2e1ca_add_base_tables.py  2023-11-23T19:42_181f5be08068_add_base_tables.py  2023-12-10T19:08_f23b683c37a7_add_account_table.py  2024-01-14T10:23_088d3e1f3ad7_add_more_constraints_and_commit_id.py  2024-01-30T18-39_debbcffbd731_handle_multiple_creators_for_a_fusion.py  2024-01-31T18:37_9d927bfa809b_remove_unique_creator_from_fusion.py  2024-02-19T19:38_cbd742fb1fe8_add_ranking_information_in_fusion_table.py  2024-04-05T18:16_003504678ed1_add_reference_table.py  2024-10-05T14:31_88ec6c82bbcf_add_reference_table.py  2024-10-07T17:49_bb41c25611ec_add_reference_table.py  2024-10-08T08-24_26ce77c6f57c_add_reference_table.py  2024-10-08T08:24_26ce77c6f57c_add_reference_table.py  2024-10-10T15-49_5375393acc85_add_user_role.py  2024-10-10T15:49_5375393acc85_add_user_role.py  2024-10-11T14:35_94256a9f3302_add_fusion_reference_unique_constraint.py  2024-10-16T16:12_fa6d386bd446_add_account_reset_password.py  2024-10-17T15:30_cb9567a5a9ad_add_unique_case_insensitive_email_.py  2024-11-08T11-43_a4ce5b113c45_add_pokemon_height_and_weight.py  2025-09-26T18-01_458c82c15520_optimize_indexes.py  2025-10-25T12-55_28c5ff523ffd_add_fusion_denormalized_table.py  2025-10-26T20-57_a8d43ee9316d_add_rank_to_fusion_denormalized_table.py  2025-10-28T20-09_eef2d64d7067_replace_fusion_denormalized_table_by_materialized_table.py  2025-11-02T22-30_69021d3bdd1f_add_is_hidden_property_to_fusion.py  2025-11-11T16-39_09e8d2eb51ae_improve_analytics_performance.py  2025-11-12T12-41_b44f2d6a3b27_fix_reference_doublons_in_fusion_.py
pokinder-backend/credit/: 2023-07.csv.REMOVED.git-id
pokinder-backend/credits/: 2023-07.csv
pokinder-backend/migration/0_112/: creators.json  pokemon_families.json
pokinder-backend/migration/1-0_1-112/: fusions.json  pokemons.json
pokinder-backend/migration/112_117/: creators.json  fusions.json  pokemons.json
pokinder-backend/migration/117_118/: creators.json  fusions.json  pokemons.json
pokinder-backend/migration/118_120/: creators.json  fusions.json
pokinder-backend/migration/120_121/: creators.json  fusions.json
pokinder-backend/migration/121_122/: creators.json  fusions.json
pokinder-backend/script/: 1.populate_database.py  2.populate_minio.py  3.update_database.py  4.clean_database.py  5.insert_minio.py  6.clean_unavailable_fusion.py  7.recover_minio.py  8.generate_sprite_pack_migration.py  9.apply_sprite_pack_migration.py  entry  populate_database.py  populate_minio.py  update_database.py
pokinder-backend/src/: __init__.py  app.py
pokinder-backend/src/data/: pokemon_families.py  pokemon_name_separator_indexes.py
pokinder-backend/src/script/: populate_database.py
pokinder-backend/src/security/: __init__.py  guard.py  jwt.py  middleware.py
pokinder-backend/src/shared/: reference_color.py
pokinder-backend/src/utils/: cache.py  collection.py  discord.py  env.py  exceptions.py  pydantic.py  sqlalchemy.py  uuid.py
(+329 files in other folders)
